--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,15 @@ services:
     networks:
       - unarxiv-net
 
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - unarxiv-net
+
 networks:
   unarxiv-net:
     driver: bridge
